[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Cannon.gd" type="Script" id=1]
[ext_resource path="res://resources/img/1.png" type="Texture2D" id=2]

[node name="Cannon" type="Node2D" groups=[
"ColoredEntity",
]]
script = ExtResource( 1 )

[node name="Sprite2D" type="TextureRect" parent="."]
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 150.0
offset_bottom = 38.0
custom_minimum_size = Vector2( 150, 24 )
pivot_offset = Vector2( 10, 10 )
clip_contents = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="GuideLine" type="Line2D" parent="Sprite2D"]
modulate = Color( 1, 1, 1, 0.1 )
show_behind_parent = true
position = Vector2( 0, 10 )
points = PackedVector2Array( 135, 2, 2000, 2 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 1
joint_mode = 2
sharp_limit = 2.0
round_precision = 10

[node name="CannonTip" type="Marker2D" parent="Sprite2D"]
position = Vector2( 120, 12 )

[node name="CannonBase" type="Marker2D" parent="Sprite2D"]
position = Vector2( 0, 12 )

[node name="Projectiles" type="Node" parent="."]

[node name="FireCooldown" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

